Overlapping issue in the hosptial dashboard has been fixed

--- a/static/style.css
+++ b/static/style.css
@@ -216,13 +216,14 @@
     background-color: beige;
     border-radius: 20px;
     width: 500px;
-    height: 100px;
+    min-height: 200px;
     margin: 20px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 7px;
+    padding: 20px;
+    box-sizing: border-box;
 
 }
 
